# MRITorch

./: .gitignore  LICENSE  README.md  pyproject.toml
mritorch/: epg.py
tests/: test_epg.py
