[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "mritorch"
version = "0.0.1"
dependencies = [
  "torch >= 2.0.0"
]
authors = [
  { name="Samuel I. Adams-Tew", email="samuel.adams@utah.edu" },
]
description = "A physics-informed PyTorch library for quantitative MRI"
keywords = ["MRI", "PyTorch", "physics-informed", "quantitative MRI"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/fuslab-uofu/MRITorch"